@@ -1,3 +1,9 @@
+2009-05-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/{tif_jpeg.c,tif_ojpeg.c,tif_getimage.c}: Fixed various
+	error reports to use "%s" as format string.
+	http://trac.osgeo.org/gdal/ticket/2976
+	
 2009-03-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/{tif_fax3.c,tif_jpeg.c,tif_ojpeg.c}: Fix printdir chaining
